--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Uploaders: Mike Gabriel <sunweaver@debian.org>,
            Emilio Pozuelo Monfort <pochu@debian.org>,
            Dylan Aïssi <daissi@debian.org>
 Build-Depends: debhelper-compat (= 13),
+               dh-exec,
                freerdp2-dev [!ia64],
                libcairo2-dev (>= 1.10.0),
                libcolord-dev (>= 0.1.27),
