--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Uploaders: Mike Gabriel <sunweaver@debian.org>,
            Dylan Aïssi <daissi@debian.org>
 Build-Depends: debhelper-compat (= 13),
                dh-exec,
-               freerdp2-dev [!ia64],
+               freerdp2-dev,
                libcairo2-dev (>= 1.10.0),
                libcolord-dev (>= 0.1.27),
                libdbus-1-dev,
@@ -24,7 +24,7 @@ Build-Depends: debhelper-compat (= 13),
                libinput-dev (>= 1.2.0),
                libjpeg-dev,
                liblcms2-dev,
-               libneatvnc-dev (>= 0.7.0) [!ia64 !sparc64],
+               libneatvnc-dev (>= 0.7.0) [!sparc64],
                libpam0g-dev,
                libpango1.0-dev,
                libpipewire-0.3-dev,
