--- a/debian/control
+++ b/debian/control
@@ -55,7 +55,7 @@ Build-Depends: debhelper-compat (= 13),
 Standards-Version: 4.7.0
 Vcs-Browser: https://salsa.debian.org/xorg-team/wayland/weston
 Vcs-Git: https://salsa.debian.org/xorg-team/wayland/weston.git
-Homepage: https://wayland.freedesktop.org/
+Homepage: https://wayland.pages.freedesktop.org/weston/
 Rules-Requires-Root: no
 
 Package: weston
